--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -405,7 +405,7 @@
                   </button>
                   <button class="btn btn-light" href="">New Analystics</button>
 
-                  <h5>To Do</h5>
+                  <h5 class="mt-2">To Do</h5>
                   <hr />
                   <ul>
                     <li class="list-group-item"><a href="#">Task 1</a></li>
