--- a/public/Kanbas/Courses/Assignments/screen.html
+++ b/public/Kanbas/Courses/Assignments/screen.html
@@ -17,7 +17,6 @@
     <div class="d-flex">
       <!-- Left: Kanbas Navigation -->
       <div class="d-none d-md-block">
-        <!-- Col 1: Kanbas Navigation Here -->
         <ul class="wd-kanbas-navigation">
           <li><a href="http://northeastern.edu">N</a></li>
           <li>
@@ -28,7 +27,7 @@
           </li>
           <li>
             <a href="/Kanbas/Dashboard/screen.html">
-              <i class="fa fa-tachometer"></i> Dashboard</a
+              <i class="fas fa-tachometer-alt"></i> Dashboard</a
             >
           </li>
           <li class="wd-active">
@@ -37,7 +36,7 @@
             >
           </li>
           <li>
-            <a href="#"><i class="fa fa-calendar"></i> Calendar</a>
+            <a href="#"><i class="far fa-calendar-alt"></i> Calendar</a>
           </li>
           <li>
             <a href="#"
@@ -46,13 +45,13 @@
             >
           </li>
           <li>
-            <a href="#"><i class="fa fa-clock-o"></i>History</a>
+            <a href="#"><i class="far fa-clock"></i>History</a>
           </li>
           <li>
             <a href="#"><i class="fa fa-laptop"></i> Studio</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-sign-out"></i> Commons</a>
+            <a href="#"><i class="fas fa-sign-out-alt"></i> Commons</a>
           </li>
           <li>
             <a href="#"
