--- a/public/Kanbas/Courses/screen_template.html
+++ b/public/Kanbas/Courses/screen_template.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css" />
     <!-- <link rel="stylesheet" href="/Kanbas/Courses/Assignments/index.css" /> -->
     <link rel="stylesheet" href="/Kanbas/Courses/Grades/index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <!-- Refactored using Bootstrap grid system -->
@@ -86,7 +87,7 @@
           <!-- Bottom 2 Cols: Course Navigation + Grade Edit -->
           <div class="d-flex">
             <!-- Col 1: Nav -->
-            <div class="d-none d-xl-block">
+            <div class="d-none md-block">
               <ul class="wd-navigation">
                 <li class="wd-active">
                   <a href="/Kanbas/Courses/Home/screen.html">Home</a>
